--- a/web/index.html
+++ b/web/index.html
@@ -49,18 +49,28 @@
       touch-action: pan-y;
     }
   </style>
-
-  <!-- Google tag (gtag.js) -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-4SJNNRFW4C"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-
-    gtag('config', 'G-4SJNNRFW4C');
-  </script>
 </head>
 <body>
+  <script>
+    const loadAnalytics = () => {
+      const gtagScript = document.createElement('script');
+      gtagScript.async = true;
+      gtagScript.src =
+        'https://www.googletagmanager.com/gtag/js?id=G-4SJNNRFW4C';
+      document.head.appendChild(gtagScript);
+
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-4SJNNRFW4C');
+    };
+
+    if ('requestIdleCallback' in window) {
+      requestIdleCallback(loadAnalytics, {timeout: 2000});
+    } else {
+      setTimeout(loadAnalytics, 1200);
+    }
+  </script>
   <script async src="flutter_bootstrap.js"></script>
 </body>
 </html>
